--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "csgo-skins",
-    "slug": "csgo-skins",
+    "name": "csgo-skinsasd",
+    "slug": "csgo-skinsaaa",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
