--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@expo/webpack-config": "^0.12.75",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
-    "typescript": "~4.0.0"
+    "@types/webpack": "^5.28.0",
+    "typescript": "~4.0.0",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.0"
   },
   "private": true
 }
