--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject"
+    // "dev": "webpack"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
     "foundation-sites": "^6.6.3",
-    "node-sass": "^6.0.0",
     "react": "16.13.1",
     "react-dom": "^16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
